// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "幫您查詢「計程車上有裝悠遊卡感⋯⋯」的相關回應。",
      "type": "text",
    },
    Object {
      "text": "請問下列文章中，哪一篇是您剛才傳送的訊息呢？",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> 計程車上有裝悠遊卡感應器，老人悠悠卡可以

若以上皆非，請打 0。",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:52.41%] 
 計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可以善加利用！=7",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":0,\\"issuedAt\\":1497994017447}",
                "label": "選擇",
                "type": "postback",
              },
            ],
            "text": "這裡沒有一篇是我傳的訊息。",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
      "AVvY-yizyCdS-nWhuYWy",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "幫您查詢「YouTube · ⋯⋯」的相關回應。",
      "type": "text",
    },
    Object {
      "text": "請問下列文章中，哪一篇是您剛才傳送的訊息呢？",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> YouTube  ·  寻找健康人生

選擇請打 2> YouTube
·
寻找健康人生",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:100.00%] 
 YouTube  ·  寻找健康人生",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1497994017447}",
                "label": "選擇此則",
                "type": "postback",
              },
            ],
            "text": "[相似度:100.00%] 
 YouTube
·
寻找健康人生",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`only one article found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1497994017447,
  "replies": undefined,
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle article not found 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "找不到關於「YouTube · ⋯⋯」訊息耶 QQ",
      "type": "text",
    },
    Object {
      "altText": "【送出訊息到公開資料庫？】
若這是「轉傳訊息」，而且您覺得這很可能是一則「謠言」，請將這則訊息送進公開資料庫建檔，讓好心人查證與回覆。

雖然您不會立刻收到查證結果，但可以幫助到未來同樣收到這份訊息的人。

請按左下角「⌨️」鈕，把「為何您會覺得這是一則謠言」的理由傳給我們，幫助闢謠編輯釐清您有疑惑之處。
若想放棄，請輸入「n」。",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "size": "xxs",
              "text": "若這是「轉傳訊息」，而且您覺得這很可能是一則「謠言」，請將這則訊息送進公開資料庫建檔，讓好心人查證與回覆。",
              "type": "text",
              "wrap": true,
            },
            Object {
              "size": "xxs",
              "text": "雖然您不會立刻收到查證結果，但可以幫助到未來同樣收到這份訊息的人。",
              "type": "text",
              "wrap": true,
            },
            Object {
              "color": "#990000",
              "size": "md",
              "text": "請打字告訴我們：",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            Object {
              "color": "#ff0000",
              "size": "xxl",
              "text": "為何您會覺得這是一則謠言？",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1497994017447}",
                "label": "放棄送出",
                "type": "postback",
              },
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "⌨️ 傳理由給我們",
                "type": "uri",
                "uri": "line://oaMessage/@cofacts/?%E5%9B%A0%E7%82%BA%E2%8B%AF%E2%8B%AF",
              },
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "header": Object {
          "contents": Array [
            Object {
              "color": "#009900",
              "size": "sm",
              "text": "送出訊息到公開資料庫？",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "state": "ASKING_ARTICLE_SUBMISSION_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
